# life-beyond-relational-db

./: .gitignore  README.md  cm-demo.cabal  eventsourced.cabal  slides.html  slides.md
main/: Demo.hs  demo-service.hs  email-service.hs
main/Demo/: Model.hs  Service.hs  State.hs  Store.hs
src/Capital/: Demo.hs  EventSourced.hs
src/Capital/Demo/: Library.hs  Model.hs  Service.hs  State.hs
