name:                eventsourced
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Capital Match
maintainer:          dev@capital-match.com

category:            Web

build-type:          Simple
cabal-version:       >=1.10

Library
  Default-Language:   Haskell2010
  build-depends:    base, mtl
                  , aeson, time
                  , text, stm, bytestring, base64-bytestring, containers

  hs-source-dirs:     src
  exposed-modules:  Capital.Demo.Library

  default-extensions: OverloadedStrings
  ghc-options:     -Wall -Werror -fno-warn-orphans -threaded -rtsopts -auto-all -caf-all

Executable demo
  Default-Language:  Haskell2010
  main-is:           demo-service.hs
  hs-source-dirs:    main
  ghc-options:      -threaded -rtsopts
  build-depends:    base, mtl, transformers, eventsourced
                  , servant, servant-server
                  , wai, aeson, warp, async
                  , text, either, stm, bytestring, containers, data-default

  other-modules: Demo
               , Demo.Model
               , Demo.Service
               , Demo.State

Test-Suite tests
   Default-Language:  Haskell2010
   hs-source-dirs:    test
   default-extensions:
                      OverloadedStrings
   type:              exitcode-stdio-1.0
   main-is:           test.hs
   ghc-options:       -threaded -Wall -Werror -fno-warn-orphans -rtsopts
   build-depends: base
                , eventsourced
                , hspec
                , hspec-wai
                , wai
                , lens
                , free
                , servant
                , servant-server
                , servant-client
                , either
                , exceptions
                , http-client
                , aeson
                , QuickCheck
                , bytestring, bytestring-conversion
                , filepath
                , directory
                , http-types
                , text
                , test-framework
                , test-framework-hunit
                , test-framework-quickcheck2
                , HUnit
                , time
                , stm
                , containers
                , data-default
                , mtl