name:                eventsourced
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Capital Match
maintainer:          dev@capital-match.com

category:            Web

build-type:          Simple
cabal-version:       >=1.10

Library
  Default-Language:   Haskell2010
  build-depends:    base, mtl
                  , aeson, time
                  , text, stm
                  , bytestring, base64-bytestring
                  , containers

  hs-source-dirs:     src
  exposed-modules:  Capital.EventSourced

  default-extensions: OverloadedStrings
  ghc-options:     -Wall -Werror -fno-warn-orphans -threaded -rtsopts -auto-all -caf-all

Executable demo
  Default-Language:  Haskell2010
  main-is:           demo-service.hs
  hs-source-dirs:    main
  ghc-options:      -threaded -rtsopts
  build-depends:    base, mtl, eventsourced
                  , servant, servant-server
                  , wai, aeson, warp, async
                  , text, either, stm, bytestring, containers, data-default

  other-modules: Demo
               , Demo.Model
               , Demo.Service
               , Demo.State
               , Demo.Store